force-app/main/default/objects/ProdSvcPricingQuoteLine__c/ProdSvcPricingQuoteLine__c.object-meta.xml
<CustomObject>
    <label>PROD/SVC+Quote Line</label>
    <nameField>
        <displayFormat>PRQL-{000000}</displayFormat>
        <label>PROD/SVC PRICING+QUOTE LINE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PROD/SVC+Quote Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>