force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/deletedSvcSellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>deletedSvcSellingUnitPriceLocal__c</fullName>
    <label>deletedSVC SELLING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>