force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/ProdBuyingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>ProdBuyingUnitPriceLocal__c</fullName>
    <label>PRODUCT BUYING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>