force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/ProdBuyingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>ProdBuyingUnitPriceUSD__c</fullName>
    <label>PRODUCT BUYING UNIT PRICE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>