force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/ProdBuyingUnitPriceUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>ProdBuyingUnitPriceUSDFormu__c</fullName>
    <formula>ProdPricingID__r.BuyingCommercialValuePerUnitUSD__c</formula>
    <label>PRODUCT BUYING UNIT PRICE(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>