force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/ProdPricingID__c.field-meta.xml
<CustomField>
    <fullName>ProdPricingID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PROD PRICING ID</label>
    <referenceTo>PRODUCT__c</referenceTo>
    <relationshipName>ProdSrvPricingQuoteLine</relationshipName>
    <type>Lookup</type>
</CustomField>