force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/ProdSellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>ProdSellingUnitPriceLocal__c</fullName>
    <label>PRODUCT SELLING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>