force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/ProdSellingUnitPriceLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>ProdSellingUnitPriceLocalFormu__c</fullName>
    <formula>ProdPricingID__r.SellingUnitPriceLocal__c</formula>
    <label>PRODUCT SELLING UNIT PRICE(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>