force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/ProdSellingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>ProdSellingUnitPriceUSD__c</fullName>
    <label>PRODUCT SELLING UNIT PRICE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>