force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/ProdSellingUnitPriceUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>ProdSellingUnitPriceUSDFormu__c</fullName>
    <formula>ProdPricingID__r.SellingCommercialValuePerUnitUSD__c</formula>
    <label>PRODUCT SELLING UNIT PRICE(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>