force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/QuoteLineID__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineID__c</fullName>
    <label>QUOTE LINE ID</label>
    <referenceTo>QuoteLine__c</referenceTo>
    <relationshipName>ProdSrvPricinggQuoteLine</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>