force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/QuoteLineRollupStatus__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineRollupStatus__c</fullName>
    <label>QUOTE LINE ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>