force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/SvcBuyingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>SvcBuyingUnitPriceLocal__c</fullName>
    <label>SVC BUYING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>