force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/SvcBuyingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>SvcBuyingUnitPriceUSD__c</fullName>
    <label>SVC BUYING UNIT PRICE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>