force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/SvcBuyingUnitPriceUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>SvcBuyingUnitPriceUSDFormu__c</fullName>
    <formula>SvcPricingID__r.BuyAmountUSD__c</formula>
    <label>SVC BUYING UNIT PRICE(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>