force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/SvcPricingID__c.field-meta.xml
<CustomField>
    <fullName>SvcPricingID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SVC PRICING ID</label>
    <referenceTo>TariffMaster__c</referenceTo>
    <relationshipName>ProdSrvPricingQuoteLine</relationshipName>
    <type>Lookup</type>
</CustomField>