force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/SvcSellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>SvcSellingUnitPriceLocal__c</fullName>
    <label>SVC SELLING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>