force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/SvcSellingUnitPriceLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>SvcSellingUnitPriceLocalFormu__c</fullName>
    <formula>SvcPricingID__r.SellKingakuJPY__c</formula>
    <label>SVC SELLING UNIT PRICE(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>