force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/SvcSellingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>SvcSellingUnitPriceUSD__c</fullName>
    <label>SVC SELLING UNIT PRICE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>