force-app/main/default/objects/ProdSvcPricingQuoteLine__c/fields/SvcSellingUnitPriceUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>SvcSellingUnitPriceUSDFormu__c</fullName>
    <formula>SvcPricingID__r.SellAmountUSD__c</formula>
    <label>SVC SELLING UNIT PRICE(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>